--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -625,5 +625,8 @@
     <FxCompile Include="Shaders\OpaqueGbuffer.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Shaders\TiledLightingPass.hlsl">
+      <Filter>Shaders\TiledLighting</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
