--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -228,6 +228,7 @@
     <ClInclude Include="DX11Include.h" />
     <ClInclude Include="DXMathInclude.h" />
     <ClInclude Include="LightData.h" />
+    <ClInclude Include="LightManager.h" />
     <ClInclude Include="ModelNode.h" />
     <ClInclude Include="StructuredBuffer.h" />
     <ClInclude Include="StructuredBufferData.h" />
@@ -312,6 +313,7 @@
     <None Include="Assets\Materials\LightMaterial.asset" />
     <None Include="Assets\Models\Head.asset" />
     <None Include="Assets\Materials\HairMaterial.asset" />
+    <None Include="Shaders\Lighting\LightStructs.hlsli" />
     <None Include="Shaders\CbufCommon.hlsli">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
